--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-header {
+.header {
   background-color: #1f2937;
   display: flex;
   justify-content: space-between;
@@ -28,4 +30,49 @@ header {
 .nav a {
   color: #f9faf8;
   text-decoration: none;
+}
+
+.hero {
+  background-color: #1f2937;
+  color: #f9faf8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  gap: 32px;
+  overflow: hidden;
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  padding-right: 48px;
+  max-width: 600px;
+}
+
+.hero img {
+  height: 500px;
+  width: auto;
+  margin-right: 48px;
+  border-radius: 14px;
+}
+
+.hero button {
+  display: inline-block;
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  max-width: 200px;
+  margin-top: 10px;
+}
+
+.hero h1,
+.hero text {
+  margin: 0;
 }
