--- a/style.css
+++ b/style.css
@@ -116,3 +116,27 @@ body {
   font-size: 14px;
   font-style: italic;
 }
+
+.testimonial {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+.testimonial p {
+  font-size: 36px;
+  font-style: italic;
+  color: #1f2937;
+  font-weight: 300;
+  max-width: 60%;
+}
+
+.author {
+  width: 50%;
+  text-align: right;
+  font-weight: bold;
+}
