--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
   text-align: center;
   max-width: 200px;
   margin-top: 10px;
+  cursor: pointer;
 }
 
 .hero h1,
@@ -139,4 +140,31 @@ body {
   width: 50%;
   text-align: right;
   font-weight: bold;
+}
+
+.cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px;
+  border-radius: 10px;
+  margin: 48px auto;
+  max-width: 800px;
+  background-color: #3882f6;
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
+.cta-text {
+  color: #f9faf8;
+}
+
+.cta button {
+  background-color: transparent;
+  color: #f9faf8;
+  border: 2px solid #f9faf8;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-left: 64px;
+  cursor: pointer;
 }
