--- a/style.css
+++ b/style.css
@@ -168,3 +168,14 @@ body {
   margin-left: 64px;
   cursor: pointer;
 }
+
+.footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  text-align: center;
+  padding: 16px;
+  font-size: 14px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
